@@ -2,6 +2,8 @@
 -----
 1. Store analysis in BLISS_ANALYSIS tag, not in a COMMENT tag.
 2. Fix read of tags during analysis phase.
+3. Check for multiple genre tags, and if found add as semi-colon separated
+   list to DB.
 
 0.4.0
 -----
